--- a/foundations/cascade/01-cascade-fix/style.css
+++ b/foundations/cascade/01-cascade-fix/style.css
@@ -8,7 +8,7 @@ body {
   font-weight: 800;
 }
 
-.small-para {
+.para.small-para { /* edit put .para before .small-para */
   font-size: 14px;
   font-weight: 800;
 }
@@ -17,7 +17,7 @@ body {
   font-size: 22px;
 }
 
-.confirm {
+.button.confirm { /* edited put .button before .confirm */
   background: green;
   color: white;
   font-weight: bold;
@@ -29,7 +29,7 @@ body {
   font-size: 20px;
 }
 
-.child {
+.text.child { /* edit put .text before .child */
   color: rgb(0, 0, 0);
   font-weight: 800;
   font-size: 14px;
